--- a/.github/workflows/specialists-unified.yml
+++ b/.github/workflows/specialists-unified.yml
@@ -278,17 +278,8 @@ jobs:
 
       - name: Install OpenCode CLI
         run: |
-          if ! command -v opencode &> /dev/null; then
-            if ! curl -fsSL https://opencode.ai/install | bash; then
-              echo "Failed to install OpenCode CLI"
-              exit 1
-            fi
-            echo "$HOME/.opencode/bin" >> $GITHUB_PATH
-          fi
-          if ! command -v opencode &> /dev/null; then
-            echo "OpenCode CLI not found after installation"
-            exit 1
-          fi
+          curl -fsSL https://opencode.ai/install | bash
+          echo "$HOME/.opencode/bin" >> $GITHUB_PATH
 
       - name: Generate Dynamic Prompt
         id: generate_prompt
