--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -10,8 +10,10 @@ on:
 jobs:
   opencode:
     if: |
-      contains(github.event.comment.body, '/oc') ||
-      contains(github.event.comment.body, '/opencode')
+      github.event_name == 'workflow_dispatch' ||
+      (github.event.comment != '' &&
+        (contains(github.event.comment.body, '/oc') ||
+         contains(github.event.comment.body, '/opencode')))
     runs-on: ubuntu-24.04-arm
     permissions:
       id-token: write
