--- a/config/.env.example
+++ b/config/.env.example
@@ -7,5 +7,17 @@ SUPABASE_SERVICE_ROLE_KEY=
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 
+# Cost Guardrails
+COST_LIMIT_DAILY=10.0
+
+# Export Integrations (Optional)
+NOTION_API_KEY=
+NOTION_DATABASE_ID=
+TRELLO_API_KEY=
+TRELLO_TOKEN=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GITHUB_TOKEN=
+
 # Application Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
