--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "clsx": "^2.1.1",
     "next": "14.2.5",
+    "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0"
