Fix issue number and label output variable names

--- a/.github/workflows/specialists-unified.yml
+++ b/.github/workflows/specialists-unified.yml
@@ -19,8 +19,8 @@ jobs:
     name: Scan Open Issues and Match Labels
     runs-on: ubuntu-24.04-arm
     outputs:
-      issue-number: ${{ steps.scan.outputs.issue_number }}
-      issue-label: ${{ steps.scan.outputs.issue_label }}
+      issue_number: ${{ steps.scan.outputs.issue_number }}
+      issue_label: ${{ steps.scan.outputs.issue_label }}
 
     steps:
       - name: Install gh and jq
@@ -62,29 +62,30 @@ jobs:
           MATCHED_NUMBER=""
           MATCHED_LABEL=""
 
-          # Ambil semua issue open (bukan PR) dan sederhanakan field
           ISSUES=$(gh api repos/"$REPO"/issues \
             --paginate \
             --jq '.[] | select(.state=="open" and (.pull_request | not)) | {number, labels: [.labels[].name]}')
 
-          while IFS= read -r ISSUE; do
-            NUMBER=$(jq -r '.number' <<<"$ISSUE")
-            LABELS=$(jq -r '.labels[]' <<<"$ISSUE" || true)
+          if [[ -n "$ISSUES" ]]; then
+            while IFS= read -r ISSUE; do
+              NUMBER=$(jq -r '.number' <<<"$ISSUE")
+              LABELS=$(jq -r '.labels[]' <<<"$ISSUE" || true)
 
-            for L in $LABELS; do
-              for V in "${VALID_LABELS[@]}"; do
-                if [[ "$L" == "$V" ]]; then
-                  MATCHED_NUMBER="$NUMBER"
-                  MATCHED_LABEL="$L"
-                  break 3
-                fi
+              for L in $LABELS; do
+                for V in "${VALID_LABELS[@]}"; do
+                  if [[ "$L" == "$V" ]]; then
+                    MATCHED_NUMBER="$NUMBER"
+                    MATCHED_LABEL="$L"
+                    break 3
+                  fi
+                done
               done
-            done
-          done <<<"$ISSUES"
+            done <<<"$ISSUES"
+          fi
 
           echo "Matched issue: ${MATCHED_NUMBER:-<none>} with label: ${MATCHED_LABEL:-<none>}"
           echo "issue_number=$MATCHED_NUMBER" >> "$GITHUB_OUTPUT"
-          echo "issue_label=$MATCHED_LABEL" >> "$GITHUB_OUTPUT"
+          echo "issue_label=$MATCHED_LABEL"  >> "$GITHUB_OUTPUT"
 
       - name: Print scan result
         run: |
@@ -93,8 +94,8 @@ jobs:
   specialist:
     name: OC ${{ matrix.specialist.display_name }}
     needs: validate-label
-    # Hanya jalan kalau ada issue dan label-nya cocok dengan specialist ini
-    if: ${{ needs.validate-label.outputs.issue-number != '' && needs.validate-label.outputs.issue-label == matrix.specialist.condition }}
+    # Hanya jalan kalau memang ada issue yang terpilih
+    if: ${{ needs.validate-label.outputs.issue_number != '' }}
     runs-on: ubuntu-24.04-arm
     timeout-minutes: 40
 
@@ -244,17 +245,28 @@ jobs:
       SPECIALIST_ROLE: ${{ matrix.specialist.role }}
       SPECIALIST_DESCRIPTION: ${{ matrix.specialist.description }}
       SPECIALIST_ACTIONS: ${{ matrix.specialist.actions }}
-      ISSUE_NUMBER: ${{ needs.validate-label.outputs.issue-number }}
-      ISSUE_LABEL: ${{ needs.validate-label.outputs.issue-label }}
+      ISSUE_NUMBER: ${{ needs.validate-label.outputs.issue_number }}
+      ISSUE_LABEL: ${{ needs.validate-label.outputs.issue_label }}
 
     steps:
+      - name: Guard – check if this specialist matches label
+        id: guard
+        run: |
+          if [[ "${ISSUE_LABEL}" == "${{ matrix.specialist.condition }}" ]]; then
+            echo "run=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "run=false" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Log Specialist Information
+        if: ${{ steps.guard.outputs.run == 'true' }}
         run: |
           echo "🚀 Running ${{ matrix.specialist.display_name }}"
           echo "📋 Issue: #${ISSUE_NUMBER}"
           echo "🏷️ Label: ${ISSUE_LABEL}"
 
       - name: Validate Required Secrets
+        if: ${{ steps.guard.outputs.run == 'true' }}
         run: |
           if [[ -z "${GH_TOKEN:-}" ]]; then
             echo "❌ GH_TOKEN secret is missing"
@@ -267,11 +279,13 @@ jobs:
           echo "✅ All required secrets are present"
 
       - name: Checkout
+        if: ${{ steps.guard.outputs.run == 'true' }}
         uses: actions/checkout@v5
         with:
           fetch-depth: 1
 
       - name: Verify Repository Access
+        if: ${{ steps.guard.outputs.run == 'true' }}
         run: |
           if ! git status >/dev/null 2>&1; then
             echo "Failed to access repository"
@@ -283,12 +297,14 @@ jobs:
           fi
 
       - name: Install OpenCode CLI
+        if: ${{ steps.guard.outputs.run == 'true' }}
         run: |
           set -euo pipefail
           curl -fsSL https://opencode.ai/install | bash
           echo "$HOME/.opencode/bin" >> "$GITHUB_PATH"
 
       - name: Generate Dynamic Prompt
+        if: ${{ steps.guard.outputs.run == 'true' }}
         id: generate_prompt
         run: |
           set -euo pipefail
@@ -359,6 +375,7 @@ jobs:
           echo "EOF" >> "$GITHUB_OUTPUT"
 
       - name: Run ${{ matrix.specialist.display_name }}
+        if: ${{ steps.guard.outputs.run == 'true' }}
         id: run_specialist
         continue-on-error: true
         timeout-minutes: 20
@@ -384,7 +401,7 @@ jobs:
           done
 
       - name: Handle Execution Failure
-        if: steps.run_specialist.outcome == 'failure' || steps.run_specialist.outputs.success == 'false'
+        if: ${{ steps.guard.outputs.run == 'true' && (steps.run_specialist.outcome == 'failure' || steps.run_specialist.outputs.success == 'false') }}
         run: |
           set -euo pipefail
           TIMESTAMP=$(date -u +"%Y-%m-%d %H:%M UTC")
@@ -419,7 +436,7 @@ jobs:
           git push || true
 
       - name: Log Completion
-        if: always()
+        if: ${{ steps.guard.outputs.run == 'true' && always() }}
         run: |
           if [[ "${{ steps.run_specialist.outputs.success }}" == "true" ]]; then
             echo "✅ ${{ matrix.specialist.display_name }} execution completed successfully for #${ISSUE_NUMBER}"
