--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "@types/js-yaml": "^4.0.9",
     "clsx": "^2.1.1",
+    "js-yaml": "^4.1.1",
     "next": "14.2.5",
     "openai": "^4.20.1",
     "react": "^18",
