--- a/.github/workflows/OC Architect.yml
+++ b/.github/workflows/OC Architect.yml
@@ -124,34 +124,18 @@ jobs:
                - security-specialist
                - seo-specialist
                - testing-specialist
-            9. Output one concrete action per run. For example:
-               - create-issue  (e.g. new work item for a specialist)
-               - create-pr     (propose that a specialist should create a PR)
-               - merge-pr      (approve merging a PR)
-               - create-conflict-issue (when PR conflicts or failing checks require follow-up)
-               - none          (when no immediate action is required)
-            10. Provide human-like reasoning as a senior CEO/CTO:
+            9. Provide human-like reasoning as a senior CEO/CTO:
                 - rational
                 - strategic
                 - context-aware
                 - concise
-            11. All real code changes are performed by specialist agents, NOT by you.
-            12. You are the ONLY agent authorized to merge PRs to the main branch.
-            13. ALWAYS consider the findings and recommendations from agent-report.md when making decisions.
-            14. For push to main events: analyze the changes and plan the next iterations and issues for specialists.
+            10. All real code changes are performed by specialist agents, NOT by you.
+            11. You are the ONLY agent authorized to merge PRs to the main branch.
+            12. ALWAYS consider the findings and recommendations from agent-report.md when making decisions.
+            13. For push to main events: analyze the changes and plan the next iterations and issues for specialists.
             
             Your output format:
-            First: write a human-style explanation of your reasoning.
-            Finally: output STRICT JSON as the last content of stdout:
-            
-            {
-              "agent": "orchestrator",
-              "action": "<dispatch | create-issue | create-pr | merge-pr | create-conflict-issue | none>",
-              "target_agent": "<frontend-specialist | backend-specialist | deploy-specialist | affiliate-marketing-specialist | analytics-specialist | content-specialist | repo-maintenance | security-specialist | seo-specialist | testing-specialist | null>",
-              "task_title": "<short title or null>",
-              "task_summary": "<description or null>",
-              "confidence": <0-100>
-            }
+            write a human-style explanation of your reasoning.
             
             Rules:
             - JSON must be the final output with no trailing text.
