feat: implement export connectors for Notion, Trello, GitHub Projects, and Google Tasks
- Add full Notion integration with page creation and rich content formatting
- Implement Trello board creation with lists, cards, and priority labels
- Create GitHub Projects integration with issues, milestones, and project boards
- Add Google Tasks sync with task lists and subtasks
- Build ExportOptions component with authentication flow
- Add comprehensive configuration management and documentation
- Update environment variables and setup guides
- Implement OAuth flows for services requiring user authentication
- Add robust error handling and validation

Resolves issue #30

AGENT=backend-specialist

--- a/config/.env.example
+++ b/config/.env.example
@@ -10,14 +10,33 @@ ANTHROPIC_API_KEY=
 # Cost Guardrails
 COST_LIMIT_DAILY=10.0
 
-# Export Integrations (Optional)
+# Export Integrations
+
+# Notion Configuration
 NOTION_API_KEY=
-NOTION_DATABASE_ID=
+NOTION_PARENT_PAGE_ID=
+NOTION_CLIENT_ID=
+NOTION_CLIENT_SECRET=
+NOTION_REDIRECT_URI=
+
+# Trello Configuration
 TRELLO_API_KEY=
 TRELLO_TOKEN=
+
+# GitHub Projects Configuration
+GITHUB_TOKEN=
+GITHUB_OWNER=
+GITHUB_REPO=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REDIRECT_URI=
+
+# Google Tasks Configuration
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GITHUB_TOKEN=
+GOOGLE_REDIRECT_URI=
+GOOGLE_ACCESS_TOKEN=
+GOOGLE_REFRESH_TOKEN=
 
 # Application Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
