--- a/.github/workflows/specialists-unified.yml
+++ b/.github/workflows/specialists-unified.yml
@@ -2,7 +2,7 @@ name: oc - Unified Specialists
 
 on:
   issues:
-    types: [opened, synchronize, reopened]
+    types: [opened, reopened]
   workflow_dispatch:
 
 permissions:
