Add backlog-specialist role and fix script output

--- a/.github/workflows/OC Architect.yml
+++ b/.github/workflows/OC Architect.yml
@@ -124,6 +124,7 @@ jobs:
                - security-specialist
                - seo-specialist
                - testing-specialist
+               - backlog-specialist
             9. Provide human-like reasoning as a senior CEO/CTO:
                 - rational
                 - strategic
