Change runner to ubuntu-24.04-arm for analyze job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ concurrency:
 jobs:
   analyze:
     name: on pull
-    runs-on: ubuntu-slim
+    runs-on: ubuntu-24.04-arm
     timeout-minutes: 60
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
