resolve: Merge dependencies for export system integration
- Resolved package.json conflicts to include Notion, Trello, GitHub, Google APIs
- Regenerated package-lock.json with updated dependencies
- Cleared TypeScript build cache for clean compilation
- Maintains ESLint v9.39.2 from main branch

--- a/config/.env.example
+++ b/config/.env.example
@@ -11,13 +11,30 @@ ANTHROPIC_API_KEY=
 COST_LIMIT_DAILY=10.0
 
 # Export Integrations (Optional)
+
+# Notion Integration
 NOTION_API_KEY=
-NOTION_DATABASE_ID=
+NOTION_CLIENT_ID=
+NOTION_CLIENT_SECRET=
+NOTION_REDIRECT_URI=
+NOTION_PARENT_PAGE_ID=
+
+# Trello Integration
 TRELLO_API_KEY=
 TRELLO_TOKEN=
+TRELLO_REDIRECT_URI=
+
+# Google Tasks Integration
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+GOOGLE_REFRESH_TOKEN=
+
+# GitHub Projects Integration
 GITHUB_TOKEN=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REDIRECT_URI=
 
 # Application Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
