--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   },
   "dependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@notionhq/client": "^5.4.0",
+    "@octokit/graphql": "^9.0.3",
     "@supabase/supabase-js": "^2.39.0",
     "@types/js-yaml": "^4.0.9",
     "clsx": "^2.1.1",
+    "googleapis": "^166.0.0",
     "js-yaml": "^4.1.1",
     "next": "14.2.33",
     "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "trello": "^0.11.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
