Fix environment configuration - add comprehensive setup and validation
- Add detailed environment setup documentation
- Create environment validation script with health checks
- Enhance .env.example with clear required/optional sections
- Add health check endpoints for environment and database status
- Update package.json with validation and database scripts
- Improve README with proper setup instructions
- Add environment-aware build and development commands

Fixes #79 - Environment Configuration Setup

--- a/config/.env.example
+++ b/config/.env.example
@@ -1,16 +1,27 @@
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
+# ==========================================
+# REQUIRED ENVIRONMENT VARIABLES
+# ==========================================
 
-# AI Provider Configuration
-OPENAI_API_KEY=
-ANTHROPIC_API_KEY=
+# Supabase Configuration (REQUIRED)
+NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
-# Cost Guardrails
+# AI Provider Configuration (at least one REQUIRED)
+# Choose ONE of the following or include both for fallback
+OPENAI_API_KEY=sk-your-openai-api-key-here
+ANTHROPIC_API_KEY=sk-ant-your-anthropic-api-key-here
+
+# Cost Guardrails (REQUIRED)
 COST_LIMIT_DAILY=10.0
 
-# Export Integrations (Optional)
+# Application Configuration (REQUIRED)
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# ==========================================
+# OPTIONAL EXPORT INTEGRATIONS
+# ==========================================
+# Only configure these if you plan to use export features
 
 # Notion Integration
 NOTION_API_KEY=
