Update CI check instructions in workflow
Clarified CI check requirements in PR guidelines.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,7 +80,7 @@ jobs:
           - Never open or update a PR without syncing to the DEFAULT_BRANCH first.
           - Never merge a PR unless:
             - No merge conflicts
-            - All CI checks are green
+            - All CI checks are green (dont wait for 'on pull' check, its you)
             - Build passes
             - Tests pass
           - Never delete files, branches, or documentation unless you are CERTAIN they are redundant and safe.
@@ -161,7 +161,7 @@ jobs:
              ONLY merge if:
              - No conflicts
              - Build passes
-             - All checks green
+             - All checks green (dont wait for 'on pull' check, its you)
              - No security-sensitive change without review
           
           4. After merge:
@@ -213,7 +213,7 @@ jobs:
           - Create PR from THIS SINGLE branch
           - PR must reference the issue
           - Ensure CI passes
-          - Merge PR if all checks are green
+          - Merge PR if all checks are green (dont wait for 'on pull' check, its you)
           
           STOP EXECUTION AFTER ISSUE MANAGER COMPLETES.
           
