Implement comprehensive test suite for Phase 0 functionality
- Add comprehensive test helpers and utilities
- Create backend service tests covering AI, database, and export services
- Add frontend component tests for all major UI components
- Implement integration tests for complete user workflows
- Add end-to-end tests covering full user journey
- Enhanced Jest configuration with proper mocking and coverage thresholds
- Added test scripts for unit, integration, and e2e testing
- Improved test coverage from 70% to 80% threshold
- Added proper mocking for external dependencies and APIs
- Created test data factories and mock response generators

Resolves #40 - Comprehensive test suite implementation

--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
+    "test:ci": "jest --coverage --ci --watchAll=false --passWithNoTests",
+    "test:unit": "jest --testPathPattern='tests/(backend-comprehensive|frontend-comprehensive)'",
+    "test:integration": "jest --testPathPattern='tests/integration-comprehensive'",
+    "test:e2e": "jest --testPathPattern='tests/e2e-comprehensive'",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
     "env:check": "bash scripts/validate-env.sh",
     "db:migrate": "supabase db push",
     "db:reset": "supabase db reset"
@@ -34,6 +40,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
