--- a/package.json
+++ b/package.json
@@ -28,26 +28,31 @@
     "@supabase/supabase-js": "^2.39.0",
     "@types/js-yaml": "^4.0.9",
     "clsx": "^2.1.1",
-    "googleapis": "^169.0.0",
+    "googleapis": "^166.0.0",
     "js-yaml": "^4.1.1",
-    "next": "14.2.35",
+    "next": "^16.1.1",
     "openai": "^4.20.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/compat": "^2.0.0",
+    "@eslint/js": "^9.39.2",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
     "autoprefixer": "^10.4.22",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.35",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
