--- a/.env.example
+++ b/.env.example
@@ -22,13 +22,20 @@ NOTION_PARENT_PAGE_ID=optional-default-parent-page-id
 # Trello Integration
 TRELLO_API_KEY=your-trello-api-key
 TRELLO_TOKEN=your-trello-oauth-token
+TRELLO_REDIRECT_URI=http://localhost:3000/api/auth/trello/callback
 
 # GitHub Integration
 GITHUB_TOKEN=your-github-personal-access-token
+GITHUB_CLIENT_ID=your-github-oauth-client-id
+GITHUB_REDIRECT_URI=http://localhost:3000/api/auth/github/callback
 
 # Google Integration
 GOOGLE_CLIENT_ID=your-google-oauth-client-id
 GOOGLE_CLIENT_SECRET=your-google-oauth-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/google/callback
 
 # Application URL
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Cost Limits
+COST_LIMIT_DAILY=100
