--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "es6"],
+    "lib": ["dom", "dom.iterable", "es2015"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -14,6 +14,7 @@
     "incremental": true,
     "target": "ES2015",
     "downlevelIteration": true,
+
     "plugins": [
       {
         "name": "next"
@@ -29,7 +30,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "tests/test.d.ts"
+    "tests/_test-env.d.ts"
   ],
   "exclude": ["node_modules"]
 }
