fix: Add npm install step to on-push workflow to resolve CI failures

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -58,6 +58,15 @@ jobs:
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - name: Install Dependencies
+        run: npm ci
+
       - name: Install OpenCode
         run: |
           curl -fsSL https://opencode.ai/install | bash
