--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "ideaflow"
+name = "ai-first"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
 
@@ -6,10 +6,10 @@ compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".next"
 
 [env.production]
-name = "ideaflow-prod"
+name = "ai-first"
 
 [env.staging] 
-name = "ideaflow-staging"
+name = "ai-first-staging"
 
 # Environment variables (these will be set via Cloudflare dashboard or wrangler secrets)
 [vars]
