--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "dev:check": "npm run env:check && npm run dev",
     "build": "next build",
+    "build:ci": "CI=true npm run build",
     "build:check": "npm run env:check && npm run build",
     "start": "next start",
     "lint": "next lint",
