fix: ESLint configuration and UX improvements
- Add ESLint overrides for test files (allow any types, unused vars)
- Fix ESLint errors in validation and integration tests
- Implement custom delete confirmation modal for better UX
- Update bug tracking documentation

Changes:
- .eslintrc.json: Add test file overrides
- src/app/dashboard/page.tsx: Add accessible delete confirmation modal
- tests/: Fix ESLint issues
- bug.md: Update bug tracking

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,15 @@
         "caughtErrorsIgnorePattern": "^_"
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["tests/**/*.ts", "tests/**/*.tsx"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/no-require-imports": "off"
+      }
+    }
+  ]
 }
