fix(ci): Add Cloudflare environment validation to fix #119
- Add validate-cloudflare-env.sh script for build-time env validation
- Add npm script 'env:check:cloudflare' for manual validation
- Add npm script 'build:cloudflare' that validates before building
- Update wrangler.toml to use build:cloudflare command
- Add GitHub Actions workflow for pre-deployment validation
- Provide clear error messages with fix instructions when env vars are missing

This addresses the P0 issue where Cloudflare Workers Build fails due to
missing environment variables by providing early validation and clear
instructions on how to configure the required variables in the Cloudflare
dashboard.

Fixes #119

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test:e2e": "jest --testPathPattern='tests/e2e-comprehensive'",
     "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
     "env:check": "bash scripts/validate-env.sh",
+    "env:check:cloudflare": "bash scripts/validate-cloudflare-env.sh",
+    "build:cloudflare": "bash scripts/validate-cloudflare-env.sh && next build",
     "db:migrate": "supabase db push",
     "db:reset": "supabase db reset"
   },
