--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "build:check": "npm run env:check && npm run build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint src tests --ext .ts,.tsx --max-warnings=50",
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
