fix(devops): fix lint configuration and create DevOps engineer documentation
- Fix lint command for Next.js 16 (removed deprecated next lint)
- Update ESLint config with proper TypeScript and React Hooks support
- Add comprehensive docs/devops-engineer.md guide
- Fix lint errors in source files
- Update Jest config (remove duplicate testMatch key)
- Fix React 19 setState-in-effect warnings using queueMicrotask
- Install required ESLint dependencies (@typescript-eslint, react-hooks)

Type-check: Pass
Lint: Pass (0 errors, 3 warnings in test files)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,35 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react-hooks/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "react-hooks"],
+  "root": true,
+  "env": {
+    "browser": true,
+    "es2020": true,
+    "node": true,
+    "jest": true
+  },
+  "globals": {
+    "jest": "readonly",
+    "global": "readonly",
+    "window": "readonly",
+    "localStorage": "readonly",
+    "sessionStorage": "readonly",
+    "Headers": "readonly",
+    "URLSearchParams": "readonly",
+    "afterEach": "readonly",
+    "beforeEach": "readonly",
+    "beforeAll": "readonly",
+    "afterAll": "readonly",
+    "describe": "readonly",
+    "it": "readonly",
+    "expect": "readonly",
+    "test": "readonly"
+  },
   "rules": {
     "react/no-unescaped-entities": "off",
     "react-hooks/exhaustive-deps": "warn",
@@ -10,6 +40,38 @@
         "varsIgnorePattern": "^_",
         "caughtErrorsIgnorePattern": "^_"
       }
-    ]
-  }
+    ],
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-require-imports": "off"
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/*.test.ts",
+        "**/*.test.tsx",
+        "**/*.spec.ts",
+        "**/*.spec.tsx"
+      ],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": "off",
+        "no-var": "off"
+      }
+    },
+    {
+      "files": [
+        "jest.config.js",
+        "jest.setup.js",
+        "next.config.js",
+        "tailwind.config.js",
+        "postcss.config.js"
+      ],
+      "rules": {
+        "@typescript-eslint/no-require-imports": "off",
+        "@typescript-eslint/no-var-requires": "off",
+        "no-undef": "off"
+      }
+    }
+  ],
+  "ignorePatterns": ["node_modules/", ".next/", "out/", "dist/", "coverage/"]
 }
